# zeone

./: .coverage  .coveragerc  .dockerignore  .env  .gitignore  App.tsx  Dockerfile  README.md  README_RU.md  TESTING.md  build_docs.py  config.py  docker-compose.yml  index.html  main.py  node_state_backup.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  umc.md
.cursor/plans/: create_gaps_2.0_strategy_document_2bda2abf.plan.md
.github/workflows/: release.yml  tests.yml
agents/: __init__.py  ai_assistant.py  cache_provider.py  distributed_agent.py  local_llm.py  manager.py  neuro_link.py  repo.py  vpn.py  web_reader.py
agents/bridge/: __init__.py  human_link.py
agents/chain/: __init__.py  weaver.py
agents/distributed/: __init__.py  client.py  pipeline.py  protocol.py  registry.py  shard.py  worker.py
agents/torrent/: __init__.py  client.py  smart_client.py
components/: Diagrams.tsx  QuantumScene.tsx
core/: __init__.py  discovery.py  distribution.py  env_setup.py  events.py  lazy_imports.py  logger.py  mcp_server.py  node.py  p2p_loader.py  protocol.py  routing.py  socks_proxy.py  transport.py  updater.py  wire.py
core/dht/: __init__.py  node.py  protocol.py  routing.py  storage.py
core/monitoring/: __init__.py  health.py  metrics.py
core/nat/: __init__.py  candidates.py  hole_punch.py  ice.py  relay.py  stun.py
core/persistence/: __init__.py  migrations.py  peer_store.py  state_manager.py
core/security/: __init__.py  dos_protector.py  merkle.py  rate_limiter.py  replay.py
core/utils/: async_db.py  env.py
cortex/: __init__.py  ai_interface.py  amplifier.py  automata.py  background.py  consilium.py  dedup.py  faces.py  genesis.py  library.py  library_api.py  magnet_indexer.py  pathfinder.py  prompts.py  roles.py  self.py  service.py  video.py  vision.py
cortex/amplifier/: __init__.py  cache.py
cortex/archivist/: __init__.py  processor.py  scanner.py  vector_store.py
cortex/compliance/: geo.py  judge.py  pii.py  rights.py
cortex/distributed/: __init__.py  codec.py  pipeline.py
cortex/evolution/: __init__.py  architect.py  challenges.py  engine.py  genetics.py  grammar.py  prompts.py  sandbox.py  simulator.py  species.py
cortex/learning/: __init__.py  aggregator.py  collector.py  runtime.py
cortex/media/: scrubber.py  service.py
cortex/zkp/: identity.py
docs/: context_feature_gggp_implemented.md  context_feature_gggp_plan.md  context_opus.md  siberium_setup.md
docs/source/: 01_architecture.md  01_whitepaper.md  02_core.md  02_cortex_vision.md  03_compliance.md  03_modules.md  04_api.md  04_economy.md  05_tokenomics.md  GAPS.md  GAPS_2.0.md  conf.py  index.rst
docs/source/en/: 01_whitepaper.md  02_architecture.md  03_cortex.md  03_modules.md  04_economy.md  05_future.md  index.rst
docs/source/ru/: 01_whitepaper.md  02_architecture.md  03_cortex.md  03_modules.md  04_economy.md  05_future.md  index.rst
economy/: __init__.py  chain.py  contracts.py  ledger.py  settlement.py  storage_schema.py  trust.py
requirements/: ai.txt  core.txt  dev.txt  faces.txt  webui.txt
scripts/: build_dist.py  deploy_siberium.py  pip312  python312
tests/: conftest.py  stress_test.py  test_dht_core.py  test_p2p_simulation.py
tests/e2e/: test_full_cycle.py  test_neuro_link.py
tests/integration/chain/: __init__.py
tests/integration/dht/: __init__.py  test_kademlia.py
tests/integration/vpn/: __init__.py
tests/unit/agents/: __init__.py  test_human_link.py
tests/unit/core/: __init__.py  test_crypto.py  test_transport.py
tests/unit/cortex/: __init__.py  test_architect_collector.py  test_genesis.py
tests/unit/economy/: __init__.py  test_ledger.py
vector_store/: chroma.sqlite3
webui/: __init__.py  app.py  streaming.py  vis_endpoint.py
webui/components/: downloader.py  gallery.py  human_status.py
webui/static/: cortex_vis.html
webui/static/js/: NeuralVis.js
webui/tabs/: __init__.py  activity.py  cinema.py  evolution.py  genesis.py  ingest.py  learning.py  library.py  settings.py  wallet.py
