# ZEONE Project Configuration
# ============================
# Python package configuration and tool settings

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeone"
version = "1.0.0"
description = "Decentralized P2P Network with AI, VPN, Storage, and Economy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ZEONE Team", email = "dev@zeone.network"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
keywords = ["p2p", "decentralized", "blockchain", "ai", "vpn"]

[project.urls]
Homepage = "https://zeone.network"
Repository = "https://github.com/siberium-net/zeone"
Documentation = "https://docs.zeone.network"

[project.scripts]
zeone = "main:main"

# ============================================================================
# Tool: pytest
# ============================================================================

[tool.pytest.ini_options]
# Test paths
testpaths = ["tests"]

# Python files to consider as tests
python_files = ["test_*.py", "*_test.py"]

# Python functions to consider as tests
python_functions = ["test_*"]

# Python classes to consider as tests
python_classes = ["Test*"]

# Async mode
asyncio_mode = "auto"

# Default options
addopts = [
    "-v",                           # Verbose
    "--strict-markers",             # Error on unknown markers
    "--tb=short",                   # Short traceback
    "-ra",                          # Show extra test summary
    "--ignore=tests/stress_test.py" # Ignore stress tests by default
]

# Markers
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (I/O, slower)",
    "e2e: End-to-end tests (full stack)",
    "stress: Stress/load tests (run separately)",
    "slow: Slow tests (skip with -m 'not slow')",
    "gpu: Tests requiring GPU hardware",
]

# Timeout per test (seconds)
timeout = 60

# Fail if tests write unexpected files
# filterwarnings = ["error"]

# Minimum version
minversion = "7.0"

# ============================================================================
# Tool: coverage
# ============================================================================

[tool.coverage.run]
source = ["core", "economy", "agents", "cortex"]
branch = true
parallel = true
omit = [
    "tests/*",
    "scripts/*",
    "build/*",
    "webui/*",
    "docs/*",
    "contracts/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "@abstractmethod",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
title = "ZEONE Coverage Report"

# ============================================================================
# Tool: black (code formatter)
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
    | \.eggs
    | contracts
    | docs
    | migrations
)/
'''

# ============================================================================
# Tool: isort (import sorter)
# ============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", ".venv/*", "contracts/*"]
known_first_party = ["core", "economy", "agents", "cortex", "webui"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# Tool: mypy (type checker)
# ============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "contracts",
    "tests",
]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "chromadb.*",
    "insightface.*",
    "nacl.*",
]
ignore_missing_imports = true

# ============================================================================
# Tool: flake8 (linter) - via setup.cfg since flake8 doesn't support pyproject.toml
# ============================================================================

# Note: flake8 configuration is in setup.cfg or .flake8

# ============================================================================
# Tool: ruff (fast Python linter)
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py39"

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument
    "C901",   # too complex
    "B904",   # raise without from in except
]

exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "contracts",
    "__pycache__",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__
"tests/*" = ["B011"]      # assert False OK in tests

