# ============================================================================
# ZEONE Project Configuration - PEP 621 Compliant
# ============================================================================
# Modern Python packaging using pyproject.toml (PEP 517/518/621)
# No setup.py required - all configuration is here
# ============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Project Metadata (PEP 621)
# ============================================================================

[project]
name = "zeone"
version = "1.0.0"
description = "Decentralized P2P Network with AI, VPN, Storage, and Economy"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "ZEONE Team", email = "dev@zeone.network"}
]

# [IMPORTANT] Use text-based license, NOT classifier
# This avoids SetuptoolsDeprecationWarning
license = {text = "MIT"}

# Classifiers - WITHOUT license classifier (deprecated!)
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Distributed Computing",
]

keywords = ["p2p", "decentralized", "blockchain", "ai", "vpn", "dht", "kademlia"]

# Core dependencies (minimal for P2P node)
dependencies = [
    "aiohttp>=3.9.0",
    "aioconsole>=0.7.0",
    "python-dotenv>=1.0.0",
    "pynacl>=1.5.0",
    "colorama>=0.4.6",
    "aiosqlite>=0.20.0",
    "aiofiles>=23.2.0",
    "base58>=2.1.0",
    "netifaces>=0.11.0",
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "psutil>=5.9.0",
    "beautifulsoup4>=4.12.0",
]

# Optional dependencies groups
[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "insightface>=0.7.0",
    "onnxruntime>=1.16.0",
]
webui = [
    "nicegui>=1.4.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.0.0",
    "sphinx>=7.0.0",
    "eth-tester>=0.9.0",
]
all = [
    "zeone[ai,webui,dev]",
]

[project.urls]
Homepage = "https://zeone.network"
Repository = "https://github.com/siberium-net/zeone"
Documentation = "https://docs.zeone.network"
Issues = "https://github.com/siberium-net/zeone/issues"
Changelog = "https://github.com/siberium-net/zeone/releases"

[project.scripts]
zeone = "main:main"

# ============================================================================
# Setuptools Configuration
# ============================================================================

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "economy*", "agents*", "cortex*", "webui*"]
exclude = ["tests*", "docs*", "scripts*", "contracts*", "build*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.sql"]

# ============================================================================
# Tool: pytest
# ============================================================================

[tool.pytest.ini_options]
# Test paths
testpaths = ["tests"]

# Python files to consider as tests
python_files = ["test_*.py", "*_test.py"]

# Python functions to consider as tests
python_functions = ["test_*"]

# Python classes to consider as tests
python_classes = ["Test*"]

# Async mode
asyncio_mode = "auto"

# Default options
addopts = [
    "-v",                           # Verbose
    "--strict-markers",             # Error on unknown markers
    "--tb=short",                   # Short traceback
    "-ra",                          # Show extra test summary
    "--ignore=tests/stress_test.py" # Ignore stress tests by default
]

# Markers
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (I/O, slower)",
    "e2e: End-to-end tests (full stack)",
    "stress: Stress/load tests (run separately)",
    "slow: Slow tests (skip with -m 'not slow')",
    "gpu: Tests requiring GPU hardware",
]

# Timeout per test (seconds)
timeout = 60

# Minimum version
minversion = "7.0"

# ============================================================================
# Tool: coverage
# ============================================================================

[tool.coverage.run]
source = ["core", "economy", "agents", "cortex"]
branch = true
parallel = true
omit = [
    "tests/*",
    "scripts/*",
    "build/*",
    "webui/*",
    "docs/*",
    "contracts/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 20
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "@abstractmethod",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
title = "ZEONE Coverage Report"

# ============================================================================
# Tool: black (code formatter)
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
    | \.eggs
    | contracts
    | docs
    | migrations
)/
'''

# ============================================================================
# Tool: isort (import sorter)
# ============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", ".venv/*", "contracts/*"]
known_first_party = ["core", "economy", "agents", "cortex", "webui"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# Tool: mypy (type checker)
# ============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "contracts",
    "tests",
]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "chromadb.*",
    "insightface.*",
    "nacl.*",
    "web3.*",
]
ignore_missing_imports = true

# ============================================================================
# Tool: ruff (fast Python linter)
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument
    "C901",   # too complex
    "B904",   # raise without from in except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__
"tests/*" = ["B011"]      # assert False OK in tests

[tool.ruff.lint.isort]
known-first-party = ["core", "economy", "agents", "cortex", "webui"]
