# ============================================================================
# Setup Configuration (Legacy Tools)
# ============================================================================
# This file is for tools that don't support pyproject.toml:
# - flake8 (linter)
# - older setuptools options
#
# Modern tools use pyproject.toml instead.
# ============================================================================

[flake8]
# Line length (match black)
max-line-length = 100

# Complexity threshold
max-complexity = 15

# Errors to select (only critical)
select = E9,F63,F7,F82

# Ignore specific errors
ignore = 
    E501,  # line too long (black handles)
    W503,  # line break before binary operator
    E203,  # whitespace before ':' (black conflict)

# Directories to exclude
exclude = 
    .git,
    .venv,
    venv,
    __pycache__,
    build,
    dist,
    *.egg-info,
    contracts,
    docs,
    migrations,
    .tox,
    .mypy_cache,
    .pytest_cache,

# Per-file ignores
per-file-ignores = 
    __init__.py: F401
    tests/*: B011,S101

# Output format
format = default
show-source = true
statistics = true
count = true


[bdist_wheel]
# Build universal wheels (Python 3 only)
universal = 0


[metadata]
# Metadata is in pyproject.toml
# This section exists only for backward compatibility
license_files = LICENSE


[options]
# Package discovery is in pyproject.toml
# This section exists only for backward compatibility
zip_safe = False
include_package_data = True

